@@ -13,7 +13,6 @@ import org.xml.sax.InputSource;
 import tocraft.craftedcore.CraftedCore;
 import tocraft.craftedcore.CraftedCoreConfig;
 import tocraft.craftedcore.event.common.PlayerEvents;
-import tocraft.craftedcore.patched.TComponent;
 import tocraft.craftedcore.util.NetUtils;
 
 import javax.xml.parsers.DocumentBuilder;
@@ -36,9 +35,9 @@ public class VersionChecker {
     private static final Map<String, Version> CACHED_VERSION = new HashMap<>();
     private static final List<String> INVALID_VERSIONS = List.of("1.16.5", "1.18.2", "1.19.4", "1.20.1", "1.20.2", "1.20.4", "1.20.5");
 
-    private static void sendUpdateMessage(ServerPlayer player, Component modName, Version newestVersion) {
-        CraftedCore.LOGGER.warn(TComponent.translatable("craftedcore.update", modName.getString(), newestVersion).getString());
-        player.sendSystemMessage(TComponent.literal(Component.translatable("craftedcore.update", modName, newestVersion).getString()).withColor(new Color(255, 255, 0).getRGB()));
+    private static void sendUpdateMessage(@NotNull ServerPlayer player, @NotNull Component modName, Version newestVersion) {
+        CraftedCore.LOGGER.warn(Component.translatable("craftedcore.update", modName.getString(), newestVersion).getString());
+        player.sendSystemMessage(Component.literal(Component.translatable("craftedcore.update", modName, newestVersion).getString()).withColor(new Color(255, 255, 0).getRGB()));
     }
 
     public static void registerMavenChecker(String modid, URL mavenURL, Component modName) {
@@ -76,7 +75,7 @@ public class VersionChecker {
                     }
                     List<Version> versions = new ArrayList<>(processVersionListWithDefaultLayout(remoteVersions, true, INVALID_VERSIONS));
                     if (!versions.isEmpty()) {
-                        newestVersion = versions.get(versions.size() - 1);
+                        newestVersion = versions.getLast();
                     }
                     CACHED_VERSION.put(modid, newestVersion);
                 }
@@ -104,7 +103,7 @@ public class VersionChecker {
                     List<String> remoteVersions = getVersionsFromGitHub(owner, repo, releasesInsteadOfTags);
                     List<Version> versions = new ArrayList<>(processVersionListWithDefaultLayout(remoteVersions, useLastPartOfVersion, invalidVersions));
                     if (!versions.isEmpty()) {
-                        newestVersion = versions.get(versions.size() - 1);
+                        newestVersion = versions.getLast();
                     }
                     CACHED_VERSION.put(modid, newestVersion);
                 } else {
@@ -118,7 +117,7 @@ public class VersionChecker {
         }));
     }
 
-    private static List<Version> processVersionListWithDefaultLayout(List<String> versions, boolean useLast, List<String> invalidVersions) {
+    private static List<Version> processVersionListWithDefaultLayout(@NotNull List<String> versions, boolean useLast, List<String> invalidVersions) {
         List<String> sortedVersions = new ArrayList<>();
         for (String version : versions) {
             // strip mod loader
@@ -135,7 +134,7 @@ public class VersionChecker {
         return sortedVersions.stream().map(Version::parse).sorted().toList();
     }
 
-    private static String stripModLoader(String input) {
+    private static @NotNull String stripModLoader(@NotNull String input) {
         String s = input.toLowerCase();
         final List<String> modLoader = List.of("fabric", "neoforge", "forge", "quilt");
         for (String loader : modLoader) {
@@ -148,7 +147,7 @@ public class VersionChecker {
         else return s;
     }
 
-    private static List<String> getVersionsFromGitHub(String owner, String repo, boolean releasesInsteadOfTags) {
+    private static @NotNull List<String> getVersionsFromGitHub(String owner, String repo, boolean releasesInsteadOfTags) {
         String url = "https://api.github.com/repos/" + owner + "/" + repo + (releasesInsteadOfTags ? "/releases" : "/tags");
         Gson GSON = new GsonBuilder().setPrettyPrinting().create();
         List<String> versions = new ArrayList<>();
@@ -187,7 +186,7 @@ public class VersionChecker {
                     List<String> remoteVersions = getVersionsFromModrinth(slug);
                     List<Version> versions = new ArrayList<>(processVersionListWithDefaultLayout(remoteVersions, useLastPartOfVersion, invalidVersions));
                     if (!versions.isEmpty()) {
-                        newestVersion = versions.get(versions.size() - 1);
+                        newestVersion = versions.getLast();
                     }
                     CACHED_VERSION.put(modid, newestVersion);
                 } else {
@@ -201,7 +200,7 @@ public class VersionChecker {
         }));
     }
 
-    private static List<String> getVersionsFromModrinth(String slug) {
+    private static @NotNull List<String> getVersionsFromModrinth(String slug) {
         String url = getModrinthUrl(slug);
         Gson GSON = new GsonBuilder().setPrettyPrinting().create();
         List<String> versions = new ArrayList<>();
